[package]
name = "log-l10n"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Moe <m@tmoe.me>"]
readme = "Readme.md"
repository = "https://github.com/2moe/log-l10n"
description = "Localization support for log"

[features]
# default = ["env-logger"]
default = ["logger"]
color = ["dep:owo-colors"]
time = ["dep:time"]
logger = ["color", "time"]
env-logger = ["dep:env_logger", "logger"]

[dependencies]
owo-colors = { version = "3.5.0", optional = true }
phf = "0.11.1"

[dependencies.env_logger]
default-features = false
features = ["regex"]
optional = true
version = "0.10.0"

[dependencies.time]
default-features = false
features = ["local-offset"]
optional = true
version = "0.3.21"

[dependencies.glossa]
version = "0.0.1-alpha.10"
# path = "../../glossa/glossa"

[build-dependencies.glossa-codegen]
version = "0.0.1-alpha.5"
# path = "../../glossa/codegen"
# default-features = false
# features = ["yaml", "highlight"]

[dev-dependencies]
log = "0.4.18"
